--- a/common.css
+++ b/common.css
@@ -3,7 +3,8 @@ body {
   height: 100%;
   width: 100%;
   overflow: auto;
-  color: #444444;
+  color: #575757;
+  font-family: 'PingFang SC-Bold';
   margin: 0;
 }
 html p,
@@ -47,10 +48,16 @@ th {
   overflow: hidden;
   visibility: hidden;
 }
+
+
+/* 业务样式 */
 /* 头部导航样式开始 */
 .header {
   width: 100%;
   height: 80px;
+  position: fixed;
+  background-color: #fff;
+  z-index: 2;
 }
 .header-content {
   width: 1200px;
@@ -97,13 +104,64 @@ th {
 }
 /* 头部导航样式结束 */
 
+/* 手机端头部导航样式开始 */
+
+.mobile-header {
+  height: 0.64rem;
+  padding-top: 0.16rem;
+  width: 100%;
+  padding-left: 0.2rem ;
+  padding-right: 0.24rem;
+  vertical-align: middle;
+  background-color: #fff;
+}
+.mobile-header-left {
+  float: left;
+  width: 1.24rem;
+  height: 100%;
+}
+.mobile-header-left img {
+  vertical-align: top;
+  width: 100%;
+}
+.mobile-header-right {
+  float: right;
+  width: 2rem;
+  height: 100%;
+}
+
+.mobile-header-download {
+  width: 1.04rem;
+  height: 0.3rem;
+  line-height: 0.3rem;
+  vertical-align: top;
+  border: 1px solid #575757;
+  border-radius: 0.19rem;
+  -webkit-border-radius: 0.19rem;
+  -moz-border-radius: 0.19rem;
+  -ms-border-radius: 0.19rem;
+  -o-border-radius: 0.19rem;
+  text-align: center;
+  font-size: 0.14rem;
+  display: inline-block;
+  margin-right: .17rem;
+}
+.mobile-more-menu {
+  font-size: 0.14rem;
+  color: #6a6a6a;
+  line-height: 0.3rem;
+}
+
+
+/* 手机端头部导航样式结束 */
+
+
 /* 分割线 */
-.module-divider-common {
+module-divider-common, .module-divider-common1, .module-divider-common2 {
   text-align: center;
   color: #2c2c2c;
   font-size: 48px;
   font-weight: bold;
-  font-family: 'PingFang SC-Bold';
   height: 200px;
   line-height: 200px;
   background-color: #f4f5f6;
@@ -116,6 +174,8 @@ th {
   background: url('./images/divider-bg2.png') no-repeat 50% 67%;
   display: inline-block;
 }
+
+
 
 /* 页脚开始 */
 .footer-top {
@@ -182,5 +242,145 @@ th {
   height: 14px;
 }
 
-
 /* 页脚结束 */
+
+/* 手机端底部开始 */
+.mobile-footer-wrap {
+  padding: .24rem .4rem .24rem ;
+  background-color: #111;
+}
+.client-download {
+  display: inline-block;
+  width: 49%;
+  margin-bottom: .16rem;
+}
+.mobile-footer-title-text {
+  font-size: .16rem;
+  color: #fff;
+  margin-bottom: .08rem;
+}
+.mobile-footer-con-text {
+  font-size: .14rem;
+  color: #8e8e8e;
+}
+.mobile-footer-item {
+  margin-bottom: .24rem;
+}
+.friend-link {
+  margin-right: .24rem;
+}
+.about-us {
+  padding: 0 .12rem;
+  position: relative;
+}
+.about-us:first-child {
+  padding-left: 0;
+}
+.about-us::after {
+  content: '';
+  width: 1px;
+  height: .12rem;
+  right: 0;
+  background-color: #8e8e8e;
+  position: absolute;
+  top: 50%;
+  margin-top: -.05rem;
+}
+.about-us:last-child::after {
+  display: none;
+}
+.footer-code-item {
+  width: 48%;
+  display: inline-block;
+  text-align: center;
+  margin-right:1%;
+}
+.footer-code-item img {
+  width: 100%;
+}
+
+/* 手机端底部结束 */
+
+
+/* 屏幕宽度小于769 使用移动端样式 */
+
+@media screen and (min-width: 320px) and (max-width: 370px) {
+  html {
+    font-size: 80px;
+  }
+}
+
+@media screen and (min-width: 371px) and (max-width: 769px) { 
+  html {
+    font-size: 100px;
+  }
+}
+
+
+@media screen and (max-width: 769px) {
+  html {
+    background-color: #F4F5F6;
+  }
+  body,h1,h2,h3,h4,h5,h6,p,dl,dd,ul,ol,pre,form,input,textarea,th,td,select  {
+    font-size: 14px;
+  }
+  .header {
+    display: none;
+  }
+  .banner-wrap {
+    display: none;
+  }
+  .module-divider-common1 {
+    display: none;
+  }
+  .mobile-module-divider-common {
+    text-align: center;
+    color: #2c2c2c;
+    font-size: 20px;
+    height: 0.68rem;
+    line-height: 0.68rem;
+  }
+  .mobile-divider-content1 {
+    background: url('./images/divider-bg1.png') no-repeat 50% 100%;
+    background-size: contain;
+  }
+  .module-divider-common2 {
+    font-size: 20px;
+  }
+  .more-game-wrap {
+    display: none;
+  }
+  .price-preview {
+    display: none
+  }
+  .footer-top {
+    display: none;
+  }
+  .footer-bottom {
+    display: none;
+  }
+
+}
+
+@media screen and (min-width : 770px) {
+  .mobile-header {
+    display: none;
+  }
+  .mobile-banner-wrap {
+    display: none;
+  }
+  .mobile-module-divider-common {
+    display: none;
+  }
+  .mobile-game-wrap {
+    display: none;
+  }
+  .mobile-price-preview {
+    display: none;
+  }
+  .mobile-footer-wrap {
+    display: none;
+  }
+  
+
+}
