--- a/common.css
+++ b/common.css
@@ -102,6 +102,11 @@ th {
   margin-top: 21px;
   cursor: pointer;
 }
+.header-download:hover {
+  color: #00AFFF;
+  border-color: #00AFFF;
+}
+
 /* 头部导航样式结束 */
 
 /* 手机端头部导航样式开始 */
@@ -116,6 +121,7 @@ th {
   background-color: #fff;
   position: fixed;
   z-index: 2;
+  box-shadow: 0px 2px 4px 0px rgba(124,124,124,0.07);
 }
 .mobile-header-left {
   float: left;
@@ -148,12 +154,56 @@ th {
   display: inline-block;
   margin-right: .17rem;
 }
-.mobile-more-menu {
+.mobile-more-menu-btn {
   font-size: 0.14rem;
   color: #6a6a6a;
   line-height: 0.3rem;
 }
 
+
+.mobile-more-menu-mask {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background: rgba(57,57,57,0.5);
+  z-index: 3;
+  /* opacity: 0; */
+  transition: opacity 0.3s ease  ;
+  -webkit-transition: opacity 0.3s ease  ;
+  -moz-transition: opacity 0.3s ease  ;
+  -ms-transition: opacity 0.3s ease  ;
+  -o-transition: opacity 0.3s ease  ;
+  display: none;
+}
+.mobile-more-menu {
+  width: 2.8rem;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  background-color: #fff;
+  z-index: 3;
+}
+.btn-close {
+  margin-bottom: .24rem;
+  text-align: right;
+  padding-right: .27rem;
+  padding-top: .2rem;
+}
+.mobile-more-nav {
+  height: .7rem;
+  line-height: .7rem;
+  border-bottom: 1px solid #d9d9d9;
+  padding-left: .24rem;
+
+}
+.mobile-more-nav a {
+  color: #575757;
+  font-size: .16rem;
+}
 
 /* 手机端头部导航样式结束 */
 
@@ -372,6 +422,9 @@ th {
   .mobile-banner-wrap {
     display: none;
   }
+  .mobile-module-divider-common {
+    /* display: none; */
+  }
   .mobile-game-wrap {
     display: none;
   }
@@ -381,6 +434,8 @@ th {
   .mobile-footer-wrap {
     display: none;
   }
-  
+  .mobile-more-menu-mask {
+    display: none;
+  }
 
 }
