--- a/index.css
+++ b/index.css
@@ -95,8 +95,6 @@
 /* 手机端第一屏banner开始 */
 .mobile-banner-wrap {
   width: 100%;
-  /* height: 2.81rem; */
-  border: 1px solid red;
   background: url('./images/banner-bg1.png');
   background-size: cover;
   padding-bottom: 0.45rem;
@@ -298,7 +296,6 @@
 /* 手机端首页价格結束 */
 
 
-
 /*************** pc端结束 *********************** */
 
 
@@ -316,6 +313,7 @@
     line-height: 0.28rem;
     font-size: .14rem;
     margin-right: 8px;
+    background-image: url('./images/banner-price-bg-mobile.png');
   }
   .common-line2-game {
     font-size: .14rem;
