--- a/common.css
+++ b/common.css
@@ -319,14 +319,14 @@ th {
 
 
 /* pc端侧边栏联系客服开始 */
-.sidebar {
+.pc-sidebar {
   width: 64px;
   position: fixed;
   top: 50%;
   margin-top: -75px;
   right: 56px;
 }
-.sidebar .services {
+.pc-sidebar .services {
   height: 166px;
   margin-bottom: 16px;
   background: linear-gradient( #34B5DD 17%, #0962E7 92%);
@@ -346,7 +346,7 @@ th {
   display: inline-block;
   padding: 10px 24px;
 }
-.sidebar .services i {
+.pc-sidebar .services i {
   font-size: 40px;
   margin-bottom: 4px;
 }
@@ -446,7 +446,7 @@ th {
   }
 }
 
-
+/* 手机屏幕 */
 @media screen and (max-width: 769px) {
   html {
     background-color: #F4F5F6;
@@ -489,6 +489,11 @@ th {
   .footer-bottom {
     display: none;
   }
+  .pc-sidebar {
+    display: none;
+  }
+
+
 }
 
 /* 电脑屏幕 */
