--- a/index.css
+++ b/index.css
@@ -133,9 +133,7 @@
    width: 656px;
    height: 680px;
    float: right;
-   background-color:aliceblue;
    overflow: hidden;
-
 }
 .more-game-content {
   height: 200%;
@@ -150,19 +148,97 @@
   text-align: center;
   background-color: #373737;
   cursor: pointer;
-  /* margin-top: 34px; */
 }
+.more-game-download-wrap {
+  display: none;
+}
+.more-game-download-mask {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background: rgba(57,57,57,0.5);
+  z-index: 3;
+}
+.more-game-download {
+  width: 1200px;
+  height: 477px;
+  background: url('./images/download-bg.png');
+  position: absolute;
+  top: 50%;
+  margin-top: -238px;
+  left: 50%;
+  margin-left: -600px;
+  padding-right: 34px;
+  z-index: 4;
+}
+.more-game-download-right {
+  margin-left: 742px;
+  padding-top: 145px;
+  user-select: none;
+}
+.more-game-download-title {
+  font-size: 38px;
+  color: #fff;
+  font-weight: bold;
+  margin-bottom: 25px;
+}
+.more-game-pc-download {
+  display: inline-block;
+  cursor: pointer;
+}
+.more-game-mobile-download {
+  display: inline-block;
+  width: 124px;
+  height: 124px;
+  text-align: center;
+  vertical-align: top;
+  /* color: #fff; */
+  cursor: pointer;
+  background-color: #fff;
+  padding-top: 4px;
+  /* padding: 0 14px; */
+}
+.more-game-mobile-download img {
+  width: 96px;
+  height: 96px;
+}
+.more-game-pc-download {
+  color: #3a3a3a;
+  width: 229px;
+  margin-right: 4px;
+}
+.more-game-pc-download .iconfont, .more-game-mobile-download .iconfont {
+  margin-right: 4px;
+}
+.more-game-mac-download {
+  width: 100%;
+  height: 54px;
+  line-height: 54px;
+  text-align: center;
+  margin-bottom: 16px;
+  display: inline-block;
+  background-color: #fff;
+}
+.more-game-window-download {
+  width: 100%;
+  height: 54px;
+  line-height: 54px;
+  text-align: center;
+  display: inline-block;
+  background-color: #fff;
+}
+
 
 /* 查看更多游戏结束 */
 
 /* 手机端查看更多游戏结束 */
-.mobile-game-wrap {
-
-}
 .mobile-game-img {
   background-color: #EBECED;
   height: 1.82rem;
   margin-bottom: .15rem;
+  background: url('./images/game-list-mobile.png') no-repeat 50%;
 }
 .mobile-more-game {
   width: 1.48rem;
@@ -350,8 +426,6 @@
     width: .64rem;
     height: .64rem;
   }
-
-
 }
 
 /*************** 手机移动端结束 *********************** */
