1、查看更多游戏弹框，增加右上角叉叉按钮； 2、样式调整

--- a/common.css
+++ b/common.css
@@ -105,6 +105,9 @@ th {
   margin-top: 21px;
   cursor: pointer;
 }
+.header-download a {
+  color: #575757;
+}
 .header-download i {
   margin-right: 4px;
 }
