--- a/index.css
+++ b/index.css
@@ -108,6 +108,7 @@
 .banner-mobile-download img {
   width: 96px;
   height: 96px;
+  margin: 0 auto;
 }
 
 
@@ -216,6 +217,20 @@
   margin-left: 742px;
   padding-top: 145px;
   user-select: none;
+  position: relative;
+}
+.more-game-download-close {
+  position: absolute;
+  top: 10px;
+  right: -20px;
+  color: #fff;
+  cursor: pointer;
+}
+.more-game-download-close i {
+  font-size: 24px;
+}
+.more-game-download-close:hover {
+  color: #d3d3d3;
 }
 .more-game-download-title {
   font-size: 38px;
