--- a/index.css
+++ b/index.css
@@ -105,7 +105,7 @@
   background: #373737;
   text-align: center;
 }
-.banner-mobile-download img {
+.banner-mobile-download #app-download-qrcode-pc {
   width: 96px;
   height: 96px;
   margin: 0 auto;
@@ -252,14 +252,16 @@
   background-color: #fff;
   padding-top: 4px;
 }
-.more-game-mobile-download img {
+.more-game-mobile-download #app-download-qrcode-more {
   width: 96px;
   height: 96px;
 }
 .more-game-pc-download {
-  color: #3a3a3a;
   width: 229px;
   margin-right: 4px;
+}
+.more-game-pc-download a {
+  color: #3a3a3a;
 }
 .more-game-pc-download .iconfont, .more-game-mobile-download .iconfont {
   margin-right: 4px;
@@ -519,7 +521,7 @@
     width: 1.08rem;
     height: 1.08rem;
   }
-  .banner-mobile-download img {
+  .banner-mobile-download #app-download-qrcode-mobile {
     width: .64rem;
     height: .64rem;
   }
