--- a/common.css
+++ b/common.css
@@ -2,7 +2,8 @@ html,
 body {
   height: 100%;
   width: 100%;
-  overflow: auto;
+  overflow-y: auto;
+  overflow-x: hidden;
   color: #575757;
   font-family: 'PingFang SC-Bold';
   margin: 0;
@@ -31,7 +32,7 @@ ol {
 a {
   text-decoration: none;
   cursor: pointer;
-  color: #fff;
+  /* color: #fff; */
 }
 th {
   font-weight: normal;
@@ -50,6 +51,27 @@ th {
 }
 .pull-right {
   float: right;
+}
+
+body::-webkit-scrollbar {
+  /*滚动条整体样式*/
+  width: 6px;
+  /*高宽分别对应横竖滚动条的尺寸*/
+  height: 6px;
+}
+
+body::-webkit-scrollbar-thumb {
+  /*滚动条里面小方块*/
+  border-radius: 3px;
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.2);
+  background: rgb(195, 206, 213);
+}
+
+body::-webkit-scrollbar-track {
+  /*滚动条里面轨道*/
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.2);
+  border-radius: 3px;
+  background: #e6e6e6;
 }
 
 
@@ -168,6 +190,10 @@ th {
   color: #6a6a6a;
   line-height: 0.3rem;
 }
+.mobile-more-menu-btn {
+  height: 0.3rem;
+  line-height: 0.3rem;
+}
 
 .mobile-more-menu-mask {
   position: fixed;
@@ -259,9 +285,6 @@ th {
   margin: 0 auto;
 }
 .footer-top-content {
-  /* padding-top: 61px; */
-  /* height: 278px; */
-  /* padding-left: 80px; */
   padding: 61px 0 20px 80px;
 }
 .footer-item {
@@ -361,8 +384,10 @@ th {
 }
 .footer-logo {
   display: inline-block;
-  color: #fff;
   font-size: 18px;
+}
+.footer-logo a {
+  color: #fff;
 }
 .footer-bottom img {
   width: 14px;
