--- a/index.css
+++ b/index.css
@@ -97,6 +97,7 @@
   line-height: 80px;
   background-color: #373737;
   cursor: pointer;
+  color: #fff;
 }
 .banner-mobile-download {
   padding-top: 16px;
