--- a/common.css
+++ b/common.css
@@ -723,3 +723,37 @@ body::-webkit-scrollbar-track {
   }
 }
 
+.price-hour {
+  position: absolute;
+  left: 0;
+  top: -15px;
+  display: inline-block;
+  width: 90px;
+  height: 34px;
+  line-height: 34px;
+  color: #fff;
+  font-size: 16px;
+  text-align: center;
+  background-color: #fb651d;
+  border-radius: 2px 2px 16px 2px;
+  -webkit-border-radius: 2px 2px 16px 2px;
+  -moz-border-radius: 2px 2px 16px 2px;
+  -ms-border-radius: 2px 2px 16px 2px;
+  -o-border-radius: 2px 2px 16px 2px;
+}
+.mobile-price-hour {
+  position: absolute;
+  padding: 0 .04rem;
+  top: -.08rem;
+  left: 0;
+  height: .17rem;
+  line-height: .17rem;
+  color: #fff;
+  background-color: #fb651d;
+  border-radius: 1px 1px 9px 1px;
+  -webkit-border-radius: 1px 1px 9px 1px;
+  -moz-border-radius: 1px 1px 9px 1px;
+  -ms-border-radius: 1px 1px 9px 1px;
+  -o-border-radius: 1px 1px 9px 1px;
+}
+
