--- a/index.css
+++ b/index.css
@@ -70,54 +70,24 @@
 .line-pc-i7-wrap img {
   width: 469px;
 }
-.banner-line3 {
-  color: #fff;
-  font-size: 24px;
-  margin-bottom: 8px;
-}
-.banner-line3 .iconfont {
-  font-size: 24px;
-  margin-right: 8px;
-}
-.banner-pc-download {
-  width: 287px;
-  height: 168px;
-  text-align: center;
-  display: inline-block;
-  margin-right: 8px;
-  vertical-align: top;
-  
-}
+
 
 .download-new {
   width: 469px;
   font-size: 24px;
   text-align: center;
 }
-.download-windows:hover, .download-mac:hover, .banner-mobile-download:hover, .download-new:hover {
+.download-new:hover {
   background-color: #505050;
 }
 
-.download-mac, .download-windows, .download-new {
+.download-new {
   height: 80px;
   line-height: 80px;
   background-color: #373737;
   cursor: pointer;
   color: #fff;
   margin-bottom: 8px;
-}
-.banner-mobile-download {
-  padding-top: 16px;
-  display: inline-block;
-  width: 168px;
-  height: 168px;
-  background: #373737;
-  text-align: center;
-}
-.banner-mobile-download #app-download-qrcode-pc img {
-  width: 96px;
-  height: 96px;
-  margin: 0 auto;
 }
 
 
@@ -525,44 +495,7 @@
     font-size: .14rem;
     vertical-align: middle;
   }
-  .banner-line3 {
-    text-align: center;
-    font-size: .14rem;
-  }
-  .banner-pc-download {
-    width: 1.62rem;
-    height: 1.08rem;
-    font-size: .14rem;
-  }
-  .download-windows {
-    margin-bottom: 0.04rem;
-  }
-  .download-windows, .download-mac {
-    cursor: pointer;
-    height: .52rem;
-    line-height: .52rem;
-    color: #fff;
-  }
 
-  .banner-mobile-download {
-    width: 1.08rem;
-    height: 1.08rem;
-  }
-  .banner-mobile-download #app-download-qrcode-mobile {
-    width: .64rem;
-    height: .64rem;
-    margin: 0 auto;
-  }
-  .banner-mobile-new {
-    width: 2.8rem;
-    height: .36rem;
-    margin: 0 auto;
-    background-color: #373737;
-    color: #fff;
-    font-size: .14rem;
-    text-align: center;
-    line-height: .36rem;
-  }
 }
 
 /*************** 手机移动端结束 *********************** */
