pc端改动大致完成

--- a/common.css
+++ b/common.css
@@ -382,6 +382,9 @@ body::-webkit-scrollbar-track {
 .footer-item-lineleft {
   margin-right: 48px;
 }
+.footer-item-lineleft1 {
+  margin-right: 42px;
+}
 .footer-logo {
   display: inline-block;
   font-size: 18px;
