iconfont使用svg模式，pc端开发完善完成

--- a/common.css
+++ b/common.css
@@ -74,6 +74,14 @@ body::-webkit-scrollbar-track {
   background: #e6e6e6;
 }
 
+.icon {
+  width: 1em;
+  height: 1em;
+  vertical-align: -0.15em;
+  fill: currentColor;
+  overflow: hidden;
+}
+
 
 /* 业务样式 */
 /* 头部导航样式开始 */
