--- a/index.css
+++ b/index.css
@@ -293,6 +293,16 @@
 .download-new-mobile {
   width: 100%;
 }
+.mobile-banner-download {
+  width: 1.82rem;
+  height: .36rem;
+  margin: 0 auto;
+  background: rgba(0, 0, 0, 0.65);
+  font-size: 14px;
+  color: #fff;
+  text-align: center;
+  line-height: .36rem;
+}
 /* 手机端第一屏banner结束 */
 
 
