--- a/index.css
+++ b/index.css
@@ -74,7 +74,7 @@
    width: 463px;
    height: 82px;
    line-height: 82px;
-   background-color: rgba(0, 0, 0, 0.65);
+   background: url('./images/banner-download-bg.png');
    /* opacity: 0.7; */
    color: #fff;
    font-size: 24px;
@@ -297,7 +297,8 @@
   width: 1.82rem;
   height: .36rem;
   margin: 0 auto;
-  background: rgba(0, 0, 0, 0.65);
+  background: url('./images/banner-download-bg.png') no-repeat center center;
+  background-size: 100% 100%;
   font-size: 14px;
   color: #fff;
   text-align: center;
